update index.html and main.js

--- a/electric-fields/index.html
+++ b/electric-fields/index.html
@@ -673,7 +673,7 @@
         }
 
         // 设置所有面板的控制按钮
-        ['tools', 'presets', 'view', 'instructions', 'force', 'properties'].forEach(name => {
+        ['tools', 'presets', 'view', 'instructions', 'force', 'properties', 'settings'].forEach(name => {
             setupPanelControls(`${name}-panel`);
         });
 
